k8s/base/05-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ms-facade-devetel-configs-svc
  namespace: ms-cs-upgrade-devetel
spec:
  selector:
    app: ms-facade-devetel-configs
  type: ClusterIP
  ports:
    - name: http-ms-facade-devetel-configs
      port: 80
      targetPort: 80
